@@ -394,8 +394,12 @@ class Directory(FSCollector):
         return l
 
     def _ignore(self, path):
-        ignore_paths = self.config.getconftest_pathlist("collect_ignore", path=path)
-        return ignore_paths and path in ignore_paths
+        ignore_paths = self.config.getconftest_pathlist("collect_ignore", 
+            path=path) or []
+        excludeopt = self.config.getvalue("ignore")
+        if excludeopt:
+            ignore_paths.extend([py.path.local(x) for x in excludeopt])
+        return path in ignore_paths
         # XXX more refined would be: 
         if ignore_paths:
             for p in ignore_paths:
